# autoconcierge-www

./: .gitignore  .gitlab-ci.yml  README.md  docker.just
backend/: Dockerfile  justfile  pyproject.toml
backend/api/: admin.py  models.py  urls.py
backend/api/account/: urls.py
backend/api/auth/: urls.py
backend/api/main/: urls.py
backend/api/migrations/: 0001_initial.py  0002_alter_userprofile_options_userprofile_user_type_and_more.py  0003_alter_userprofile_account_type_and_more.py  0004_remove_userprofile_account_type_and_more.py  0005_userprofile_partner_and_more.py  0006_userprofile_address_userprofile_city_and_more.py  0007_userprofile_telegram_id.py  0008_userprofile_department.py  0009_alter_userprofile_manager_account_type.py  0010_alter_userprofile_client_account_type.py  0011_alter_userprofile_client_account_type.py
backend/api/utils/: cookiesSetter.py  decorators.py  exceptionsHandler.py  generate_qrcode.py  prefix_transliteration.py  smsProvider.py
backend/base/: settings.py  urls.py
backend/dictionaries/: admin.py  models.py
backend/dictionaries/migrations/: 0001_initial.py  0002_alter_bodytype_options.py  0003_alter_model_name.py
backend/sitemanagement/: admin.py  apps.py  models.py
backend/sitemanagement/constants/: account_types.py  image_save_path.py
backend/sitemanagement/forms/: batchQRform.py
backend/sitemanagement/migrations/: 0001_initial.py  0002_partners_qrcode_is_active_timestamp_qrcode_selled_by_and_more.py  0003_alter_partners_options_alter_partners_partner_prefix.py  0004_qrcode_account_type.py  0011_faq.py  (+23 more)
(+171 files in other folders)
